[gd_scene load_steps=9 format=3 uid="uid://lidthfxyvbu6"]

[ext_resource type="Script" uid="uid://d00vwye47hh2y" path="res://scenes/main/hud.gd" id="1_77e6q"]
[ext_resource type="Texture2D" uid="uid://dwm18c3vnli83" path="res://sprites/heart_full.png" id="1_kqgwg"]
[ext_resource type="Texture2D" uid="uid://bqtlvw35y5ta3" path="res://sprites/dim.png" id="3_8m1vl"]
[ext_resource type="Texture2D" uid="uid://dqcara34n6cs3" path="res://sprites/dialogue_box.png" id="3_5645d"]
[ext_resource type="FontFile" uid="uid://b4fgfncmcslf6" path="res://styles/Retro Gaming.ttf" id="4_xu0sl"]
[ext_resource type="Texture2D" uid="uid://mtedxqjm1b3a" path="res://sprites/bar.png" id="6_bhafg"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xu0sl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pla3n"]
atlas = SubResource("CompressedTexture2D_xu0sl")
region = Rect2(288, 16, 16, 16)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_77e6q")

[node name="HealthBar" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="HealthBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_kqgwg")

[node name="Dims" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DimIcon" type="TextureRect" parent="Dims"]
layout_mode = 0
offset_left = 1.0
offset_top = 59.0
offset_right = 65.0
offset_bottom = 123.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_8m1vl")

[node name="DimCount" type="RichTextLabel" parent="Dims"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = 39.0
offset_right = 477.0
offset_bottom = 103.0
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("4_xu0sl")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
vertical_alignment = 1

[node name="DialogueBox" type="NinePatchRect" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_5645d")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Background" type="TextureRect" parent="DialogueBox"]
layout_mode = 0
offset_left = 1.0
offset_top = 48.0
offset_right = 177.0
offset_bottom = 224.0
texture = SubResource("AtlasTexture_pla3n")
flip_v = true

[node name="Name" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 0
offset_left = 3.0
offset_right = 995.0
offset_bottom = 97.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("4_xu0sl")
theme_override_fonts/bold_font = ExtResource("4_xu0sl")
theme_override_fonts/bold_italics_font = ExtResource("4_xu0sl")
theme_override_fonts/italics_font = ExtResource("4_xu0sl")
theme_override_fonts/mono_font = ExtResource("4_xu0sl")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
vertical_alignment = 1

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 0
offset_left = 169.0
offset_top = 57.0
offset_right = 886.0
offset_bottom = 335.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("4_xu0sl")
theme_override_fonts/bold_font = ExtResource("4_xu0sl")
theme_override_fonts/bold_italics_font = ExtResource("4_xu0sl")
theme_override_fonts/italics_font = ExtResource("4_xu0sl")
theme_override_fonts/mono_font = ExtResource("4_xu0sl")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true

[node name="Image" type="TextureRect" parent="DialogueBox"]
layout_mode = 0
offset_left = 1.0
offset_top = 59.0
offset_right = 166.0
offset_bottom = 224.0
expand_mode = 1

[node name="Choices" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="WeaponDurability" type="TextureProgressBar" parent="."]
modulate = Color(0.801263, 4.23551e-06, 2.88785e-07, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 40.0
grow_horizontal = 0
fill_mode = 1
texture_progress = ExtResource("6_bhafg")
